button,autoCompleteTextView,textView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BM Weather</string>
+    <string name="search">search_Button</string>
+    <string name="searchHint">search_Hint</string>
+    <string name="messageText">message_Text</string>
 </resources>
